# xrotor-python

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  setup.py  test.py
runs/: test.xrotor
src/: api.f90  common.f90  fix_using.py  i_common.f90  interface.f90  m_common.f90  m_spline.f90  m_userio.f90  m_vortex.f90  m_xaero.f90  m_xbend.f90  m_xio.f90  m_xnoise.f90  m_xoper.f90  m_xrotor.f90  m_xutils.f90  p_test.f90  p_xbend.f90  p_xnoise.f90  p_xoper.f90  p_xrotor.f90  s_xrotor.f90  spline.f  spline.f90  use_specific.py  userio.f  userio.f90  vortex.f90  xaero.f  xaero.f90  xbend.f  xbend.f90  xinte.f  xio.f  xio.f90  xnoise.f  xnoise.f90  xoper.f  xoper.f90  xrotor.f  (+4 more)
src/fortran/: XROTOR.INC  common.f90  interface.f90  spline.f90  userio.f90  vortex.f90  xaero.f90  xbend.f90  xio.f90  xnoise.f90  xoper.f90  xrotor.f90  xutils.f90
src/xrotor/: __init__.py  model.py  test.py  xrotor.py
src_fortran/: __init__.py  userio.f90  xio.f90
xrotor/: __init__.py  interface.py  model.py  test.py  wrap.py  xaero.f90  xio.f90  xoper.f90  xrotor.f90  xrotor.py  xutils.f90
xrotor/src_fortran/: common.f90  give_context.py  interface.f90  spline.f90  xbend.f90  xio.f90  xnoise.f90  xoper.f90  xrotor.f90
xrotor/src_python/: interface.py  model.py  test.py  xrotor.py
